Added Nlogger and Swagger

--- a/UserRegistration/appsettings.json
+++ b/UserRegistration/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "SqlConnection": "Data Source=CHASE\\SQLEXPRESS; Initial Catalog = UserRegistration; Integrated Security = TRUE;"
     }
-  },
-  "AllowedHosts": "*"
 }
+
