--- a/UserRegistration/Properties/launchSettings.json
+++ b/UserRegistration/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "UserRegistration",
+      "launchUrl": "Swagger",
       "applicationUrl": "https://localhost:7089;http://localhost:5218",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
